--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,15 @@ NODE_ENV=DEVELOPMENT
 
 DB_LOCAL_URI=mongodb://127.0.0.1:27017/shopiogo
 DB_URI=mongodb://127.0.0.1:27017/shopiogo
+FRONTEND_URL=http://localhost:4000
+
+JWT_SECRET=QDQWE*#@EDD*EDOWDDSDW*DSHD*DW&@ddr4ndwqdkmsde3ee
+JWT_EXPIRE_TIME=7d
+COOKIE_EXPIRES_TIME=7
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=71ae2380874b0e
+SMTP_PASSWORD=b0e5a3c066fff8
+SMTP_FROM_EMAIL=noreply@shopiogo.com
+SMTP_FROM_NAME=SHOPIOGO
