--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
