user profile and forgot and reset password handled successfully

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,7 +3,7 @@ NODE_ENV=DEVELOPMENT
 
 DB_LOCAL_URI=mongodb://127.0.0.1:27017/shopiogo
 DB_URI=mongodb://127.0.0.1:27017/shopiogo
-FRONTEND_URL=http://localhost:4000
+FRONTEND_URL=http://localhost:3000
 
 JWT_SECRET=QDQWE*#@EDD*EDOWDDSDW*DSHD*DW&@ddr4ndwqdkmsde3ee
 JWT_EXPIRE_TIME=7d
@@ -15,3 +15,8 @@ SMTP_EMAIL=71ae2380874b0e
 SMTP_PASSWORD=b0e5a3c066fff8
 SMTP_FROM_EMAIL=noreply@shopiogo.com
 SMTP_FROM_NAME=SHOPIOGO
+
+
+CLOUDINARY_CLOUD_NAME=dj2n53d41
+CLOUDINARY_API_KEY=194385142166279
+CLOUDINARY_API_SECRET=Af0yr2APg8nNQh4Q37inGOUtLOw
